<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/printer_temp_title" />

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/printer_temp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/printer_temp_threshold_title" />

            <Spinner
                android:id="@+id/spinner_threshold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_hue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/et_printer_def_hue"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/bt_set_hue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_printer_set_hue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_speed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/et_printer_def_speed"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/bt_set_speed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_printer_set_speed" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/ll_factoryTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/cb_factoryTest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cb_factoryTest"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_printBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/cb_printBarcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cb_print_barcode"
                android:checked="true" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_barcodeType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/printer_barcode_title" />

        <Spinner
            android:id="@+id/spinner_barcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/printer_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/tst_hint_content"
        android:scrollbarStyle="insideOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_BACK"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_BACK" />

            <Button
                android:id="@+id/btn_FORWARD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_FORWARD" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_prnPicture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_prnPicture" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_barcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_barcode" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/text_style_bar">
            </include>

            <Button
                android:id="@+id/btn_prnBill"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_prnBill" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
